Change directory when executing programs or samples